tests/ui/rfcs/rfc-2528-type-changing-struct-update/type-generic-update.stderr
error[E0308]: mismatched types
  --> $DIR/type-generic-update.rs:45:11
   |
LL |         ..m1
   |           ^^ expected `Machine<'_, i32, f64>`, found `Machine<'_, f64, f64>`
   |
   = note: expected struct `Machine<'_, i32, _>`
              found struct `Machine<'_, f64, _>`

error[E0308]: mismatched types
  --> $DIR/type-generic-update.rs:50:11
   |
LL |         ..m1
   |           ^^ expected `Machine<'_, i32, i32>`, found `Machine<'_, f64, f64>`
   |
   = note: expected struct `Machine<'_, i32, i32>`
              found struct `Machine<'_, f64, f64>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
